# Rust-learning

./: .pre-commit-config.yaml  Cargo.toml  README.md  deny.toml  format.nu
.cargo/: audit.toml  config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  clippy.yml  coverage.yml  deny.yml  fmt.yml  format.yml  gitleaks.yml  miri.yml  outdated.yml  rustfmt.yml  test.yml  udeps.yml  upload.yml
chapter/chapter02/: Cargo.toml
chapter/chapter03/: Cargo.toml
chapter/chapter04/: Cargo.toml
chapter/chapter05/: Cargo.toml
chapter/chapter06/: Cargo.toml
chapter/chapter07/: Cargo.toml
chapter/chapter09/: Cargo.toml
chapter02/: Cargo.toml
chapter02/src/: main.rs
chapter03/src/: main.rs
crates/crypto/: Cargo.toml
crates/http/: Cargo.toml
crates/http/src/: main.rs
crates/image/: Cargo.toml
crates/zip/: Cargo.toml
exercise/exercise01/: Cargo.toml
exercise/exercise02/: Cargo.toml
exercise/exercise03/: Cargo.toml
exercise/exercise04/: Cargo.toml
exercise/exercise05/: Cargo.toml
snippets/: README.md
snippets/aes/: Cargo.toml
snippets/assert/: Cargo.toml
snippets/base64/: Cargo.toml
snippets/cli/: Cargo.toml
snippets/fluent/: Cargo.toml
snippets/font/: Cargo.toml
snippets/hash/: Cargo.toml
snippets/html/: Cargo.toml
snippets/http/: Cargo.toml
snippets/icu/: Cargo.toml
snippets/json/: Cargo.toml
snippets/logging/: Cargo.toml
snippets/parallel/: Cargo.toml
snippets/progress/: Cargo.toml
snippets/qr_code/: Cargo.toml
snippets/server/: Cargo.toml
snippets/simd/: Cargo.toml
(+44 files in other folders)
