[package]
name = "http"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.10", default-features = false, features = [
    "rustls-tls",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
    "json",
    "trust-dns",

] }
tokio = { version = "1.18.0", default-features = false, features = ["macros"] }
